Add vi mod for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,6 +34,9 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
+# set vi mode
+set-window-option -g mode-keys vi
+
 ####################### Visual Styling
 
 # Display thing in tmux in 256 colors
