--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,9 @@ bind l select-pane -R
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
+# remapping copy mode key using system clipboard
+bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
+
 # set mouse off
 setw -g mode-mouse off
 set -g mouse-select-pane off
@@ -19,9 +22,6 @@ set -g mouse-select-window off
 
 # set default delay sending command
 set -sg escape-time 1
-
-# shortcut to reload configuration file
-bind r source-file ~/.tmux.conf; display "Reloaded!"
 
 # spliting pane remap
 bind | split-window -h # split vertically
@@ -95,3 +95,6 @@ set -g status-interval 60
 # Identifying activity in other window
 setw -g monitor-activity on
 set -g visual-activity on
+
+# shortcut to reload configuration file
+bind r source-file ~/.tmux.conf; display "Reloaded!"
