More emacs configuration, tmux rate limit output and some vim descirption

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -96,5 +96,9 @@ set -g status-interval 60
 setw -g monitor-activity on
 set -g visual-activity on
 
+# rate-limit the output
+setw -g c0-change-trigger 10
+setw -g c0-change-interval 250
+
 # shortcut to reload configuration file
 bind r source-file ~/.tmux.conf; display "Reloaded!"
