Fix tmux config for newer version & vimrc

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,13 +12,10 @@ bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
 # remapping copy mode key using system clipboard
-bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
+bind -T copy-mode-vi y send-keys -X copy-pipe 'xclip -in -selection clipboard'
 
 # set mouse off
-setw -g mode-mouse off
-set -g mouse-select-pane off
-set -g mouse-resize-pane off
-set -g mouse-select-window off
+set -g mouse off
 
 # set default delay sending command
 set -sg escape-time 1
@@ -96,9 +93,9 @@ set -g status-interval 60
 setw -g monitor-activity on
 set -g visual-activity on
 
-# rate-limit the output
-setw -g c0-change-trigger 10
-setw -g c0-change-interval 250
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 # shortcut to reload configuration file
-bind r source-file ~/.tmux.conf; display "Reloaded!"
+bind r source-file ~/.tmux.conf
