Config from mac

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -93,9 +93,17 @@ set -g status-interval 60
 setw -g monitor-activity on
 set -g visual-activity on
 
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
+bind '-' split-window -c "#{pane_current_path}"
+bind '|' split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 # shortcut to reload configuration file
 bind r source-file ~/.tmux.conf
+
+# History config
+set -g history-file ~/.tmux_history
+
+# run bash shell
+set-option -g default-shell "/bin/bash"
+
+run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
