--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,7 +12,8 @@ bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
 # remapping copy mode key using system clipboard
-bind -T copy-mode-vi y send-keys -X copy-pipe 'xclip -in -selection clipboard'
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # set mouse off
 set -g mouse off
@@ -40,31 +41,36 @@ set-window-option -g mode-keys vi
 set -g default-terminal "screen-256color"
 
 # status bar colors
-set -g status-fg white
-set -g status-bg black
+#set -g status-fg white
+#set -g status-bg black
+set -g status-style fg=colour231,bg=black
 
 # window list colors
 # inactive window
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
+#setw -g window-status-fg cyan
+#setw -g window-status-bg default
+#setw -g window-status-attr dim
 
 # active window
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
+#setw -g window-status-current-fg white
+#setw -g window-status-current-bg red
+#setw -g window-status-current-attr bright
+set -g window-status-current-style fg=white,bg=red,bright
 
 # pane divider colors
-set -g pane-border-fg green
-set -g pane-border-bg black
+#set -g pane-border-fg green
+#set -g pane-border-bg black
+set -g pane-border-style fg=green,bg=black
 
-set -g pane-active-border-fg white
-set -g pane-active-border-bg green
+#set -g pane-active-border-fg white
+#set -g pane-active-border-bg green
+set -g pane-active-border-style fg=white,bg=green
 
 # command line
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
+#set -g message-fg white
+#set -g message-bg black
+#set -g message-attr bright
+set -g message-style fg=white,bg=black,bright
 
 ####################### Status Bar
 # Status bar items
@@ -89,10 +95,6 @@ set -g status-left "#[fg=green]Session: #S {#[fg=yellow]#I-#[fg=cyan]#P}"
 # Keeping status Bar info Up to date
 set -g status-interval 60
 
-# Identifying activity in other window
-setw -g monitor-activity on
-set -g visual-activity on
-
 bind '-' split-window -c "#{pane_current_path}"
 bind '|' split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
@@ -106,4 +108,22 @@ set -g history-file ~/.tmux_history
 # run bash shell
 set-option -g default-shell "/bin/bash"
 
+# Plugins
+# Dracula theme
+set -g @plugin 'dracula/tmux'
+set -g @dracula-show-battery false
+set -g @dracula-show-network false
+set -g @dracula-show-weather false
+set -g @dracula-show-fahrenheit false
+set -g @dracula-cpu-usage true
+set -g @dracula-ram-usage true
+set -g @dracula-show-flags true
+
+# Identifying activity in other window
+setw -g monitor-activity on
+setw -g visual-activity on
+setw -g window-status-style fg=cyan,bg=default,dim
+
 run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
+run '~/.tmux/plugins/tpm/tpm'
+
