Add copy clipboard for wsl, change color to gruvbox

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -109,6 +109,7 @@ set -g history-file ~/.tmux_history
 set-option -g default-shell "/bin/bash"
 
 # Plugins
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 # Dracula theme
 set -g @plugin 'dracula/tmux'
 set -g @dracula-show-battery false
@@ -124,6 +125,5 @@ setw -g monitor-activity on
 setw -g visual-activity on
 setw -g window-status-style fg=cyan,bg=default,dim
 
-run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
 run '~/.tmux/plugins/tpm/tpm'
 
