Add tmux resurrect vim session and postmortem template in vim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -125,5 +125,12 @@ setw -g monitor-activity on
 setw -g visual-activity on
 setw -g window-status-style fg=cyan,bg=default,dim
 
+# Resurrect save vim session
+
+# for vim
+set -g @resurrect-strategy-vim 'session'
+# for neovim
+set -g @resurrect-strategy-nvim 'session'
+
 run '~/.tmux/plugins/tpm/tpm'
 
