Change nvim configs, move gitignore to stow directory

--- a/tmux_conf/.tmux.conf
+++ b/tmux_conf/.tmux.conf
@@ -109,6 +109,7 @@ set -g history-file ~/.tmux_history
 set-option -g default-shell "/bin/bash"
 
 # Plugins
+set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 # Dracula theme
 set -g @plugin 'dracula/tmux'
@@ -133,4 +134,3 @@ set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-strategy-nvim 'session'
 
 run '~/.tmux/plugins/tpm/tpm'
-
